Fix: Attachments are included as plain text in replied mails

Thanks to Simon Levitt to point to the corrent part that needs to be
fixed.

BUG: 368060
FIXED-IN: 5.3.4